# Parallax-AI

./: .gitignore  README.md  benchmark.py  main.py  pyproject.toml  report.py
example_scripts/: safeguard_benchmarking.py  safeguard_inference_all.py
example_services/: agentic_safeguard.py
inferallel/: __init__.py  openai.py
parallax/: __init__.py  parallax_openai.py  parallax_openai_client.py
parallax_ai/: __init__.py  datapool.py  distributor.py  openai_client.py  proxy.py  service.py  test.py  utilities.py
parallax_ai/agents/: __init__.py  agent.py  base_agents.py  classification_agent.py  classification_agents.py  model_context.py
parallax_ai/benchmarks/: __init__.py
parallax_ai/benchmarks/safety_benchmarks/: __init__.py  base_bench.py  baseclasses.py  dataclasses.py  metrics.py
parallax_ai/builtin_agents/: moe_safeguard.py  safeguard.py
parallax_ai/builtins/: __init__.py
parallax_ai/builtins/safeguards/: __init__.py  agentic_safeguard.py  safeguard_model.py
parallax_ai/clients/: __init__.py  openai_client.py  parallax_client.py
parallax_ai/core/: __init__.py  agent.py  client.py  engine.py  multi_agent.py
parallax_ai/core/agents/: agent.py  classification_agent.py  model_context.py
parallax_ai/core/multi_agent/: __init__.py  dataclasses.py  multi_agent.py
parallax_ai/dataclasses/: job.py
parallax_ai/modules/: __init__.py  agent_module.py  base_module.py  classification_module.py  module_interface.py  switch_module.py
parallax_ai/modules/agent_modules/: __init__.py  agent_module.py  classification_module.py
parallax_ai/modules/basic_modules/: __init__.py  lambda_module.py  switch_module.py
parallax_ai/modules/safeguard_modules/: auto_module.py  auto_safeguard.py  base_module.py  llamaguard_module.py  polyguard_module.py  qwen3guard_module.py  sealguard_module.py  sealionguard_module.py  (+1 more)
parallax_ai/test_cases/: test_agent.py  test_agent_io.py
parallax_ai/trainers/: train.py
temp/testing/: test_agent_1.yaml  test_agent_2.yaml  test_agent_3.yaml
(+1200 files in other folders)
