[build-system]
requires = ["setuptools>=42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax-ai"
version = "0.3.7"
description = "Lightweight parallel AI API calls in Python."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Panuthep Tasawong", email = "falcon_270394@hotmail.co.th"},
]
dependencies = [
    "ray",
    "openai",
    "dataclasses-jsonschema",
    "typing-validation",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/panuthept/Parallax-AI"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["parallax_ai*"]